cluster/apps/unifi/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    goldilocks.fairwinds.com/enabled: "true"
