cluster/apps/unifi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: unifi
  labels:
    app: unifi-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: unifi
      labels:
        app: unifi-controller
    spec:
      containers:
        - name: unifi-controller
          image: lscr.io/linuxserver/unifi-controller:7.2.94
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          livenessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 300
            periodSeconds: 30
          volumeMounts:
            - mountPath: /config
              name: unifi
      restartPolicy: Always
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
