cluster/apps/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi-controller
  name: unifi-controller-udp
  namespace: unifi
  annotations: {
    metallb.universe.tf/allow-shared-ip: unifi
  }
spec:
  ports:
    - name: "3478"
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: "10001"
      port: 10001
      protocol: UDP
      targetPort: 10001
  selector:
    app: unifi-controller
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi-controller
  name: unifi-controller-tcp
  namespace: unifi
  annotations: {
    metallb.universe.tf/allow-shared-ip: unifi
  }
spec:
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: "8081"
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: "8443"
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: "8843"
      port: 8843
      protocol: TCP
      targetPort: 8843
    - name: "8880"
      port: 8880
      protocol: TCP
      targetPort: 8880
    - name: "6789"
      port: 6789
      protocol: TCP
      targetPort: 6789
  selector:
    app: unifi-controller
  type: LoadBalancer
